--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,13 @@
 				<div class="collapse navbar-collapse" id="setoMenu">
 					<ul class="navbar-nav mr-auto mt-2 mt-sm-0">
 					<li class="nav-item">
-						<a class="nav-link" href="/diensten">Diensten</a>
+						<a class="nav-link" href="{{ '/diensten' | relative_url }}">Diensten</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/over-ons">Over ons</a>
+						<a class="nav-link" href="{{ '/over-ons' | relative_url }}">Over ons</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/contact">Contact</a>
+						<a class="nav-link" href="{{ '/contact' | relative_url }}">Contact</a>
 					</li>
 					</ul>
 			</div>
