--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
 			<div class="container">
 				<span class="badge">SETO Bemmel | Tekenwerk & Consultancy</span>
 				<span class="badge">Diana 54, 6681 PM  Bemmel</span>
-				<span class="badge">0481 - 450483 | 06 - 5368 3325</span>  
+				<span class="badge"><a href="tel:0031481450483">0481 - 450483</a>  |  <a href="tel:0031653683325">06 - 5368 3325</a></span>  
 			</div>
 		</footer>
 	</div>
