--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,54 +10,50 @@
     <title>SETO Bemmel, Tekenwerk en Consultancy</title>
   </head>
   <body>
-	<header class="sticky-top">
-	<!-- <div class="bg-danger block" style="height: 12px;">  </div> -->
-		<div class="container bg-white">
-			<div class="row">
-				<h3 class="h5 d-sm-none">SETO Bemmel <small>Tekenwerk & Consultancy</small></h3>
-				
-				<img class="d-none d-sm-block" src="images/logoseto.jpg" alt="SETO Bemmel" />
-				<h3  class="d-none d-sm-block h3" style="margin: auto 0;">Tekenwerk & Consultancy</h3>
+	<header class="sticky-top bg-white" >
+			<div class="container bg-white">
+				<div class="row">
+					<h3 class="h5 d-sm-none">SETO Bemmel <small>Tekenwerk & Consultancy</small></h3>
+					<img class="d-none d-sm-block" src="images/logoseto.jpg" alt="SETO Bemmel" />
+					<h3  class="d-none d-sm-block h3" style="margin: auto 0;">Tekenwerk & Consultancy</h3>
+				</div>
 			</div>
-		</div>	
 		<div class="bg-danger"> 
-		<nav class="container navbar sticky-top navbar-dark navbar-expand-sm bg-danger">
-				<!-- <a class="navbar-brand" href="#">SETO Bemmel</a> -->
+			<nav class="container navbar navbar-dark navbar-expand-sm bg-danger">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#setoMenu" aria-controls="setoMenu" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span> 
 				</button>
 				<div class="collapse navbar-collapse" id="setoMenu">
 					<ul class="navbar-nav mr-auto mt-2 mt-sm-0">
-					<li class="nav-item">
-						<a class="nav-link" href="{{ '/diensten' | relative_url }}">Diensten</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{ '/over-ons' | relative_url }}">Over ons</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{ '/contact' | relative_url }}">Contact</a>
-					</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ '/diensten' | relative_url }}">Diensten</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ '/over-ons' | relative_url }}">Over ons</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ '/contact' | relative_url }}">Contact</a>
+						</li>
 					</ul>
-			</div>
-		</nav>
-	</div>
-	  </header>
-	  <main>
+				</div>
+			</nav>
+		</div>
+	</header>
+
+	<main class="bg-light">
 		<div class="container">
 			<h1 class="h5">{{ page.title }}</h1>
 			{{ content }}
 		</div>
 	</main>
 
-	<div class="footer-margin">
-		<footer class="footer fixed-bottom bg-primary text-light">
-			<div class="container">
+		<footer class="footer fixed-bottom bg-primary text-white">
+			<div class="container navbar">
 				<span class="badge">SETO Bemmel | Tekenwerk & Consultancy</span>
 				<span class="badge">Diana 54, 6681 PM  Bemmel</span>
-				<span class="badge"><a href="tel:0031481450483" class="text-light">0481 - 450483</a>  |  <a href="tel:0031653683325" class="text-light">06 - 5368 3325</a></span>  
+				<span class="badge"><a href="tel:+31481450483" class="text-white">0481 - 450483</a>  |  <a href="tel:+31653683325" class="text-white">06 - 5368 3325</a></span>  
 			</div>
 		</footer>
-	</div>
 	
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
