--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,12 @@
 	</header>
 
 	<main class="bg-light">
-		<div class="container">
-			<h1 class="h5">{{ page.title }}</h1>
-			{{ content }}
-		</div>
+		<div class="scrollbar-correction">
+			<div class="container">
+				<h1 class="h5">{{ page.title }}</h1>
+				{{ content }}
+			</div>
+	</div>
 	</main>
 
 		<footer class="footer fixed-bottom bg-primary text-white">
